<resources>
    <string name="app_name">Task Master</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menumain_showDurations">Durations Report</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_showAbout">About TaskTimer</string>
    <string name="menumain_generate">Generate Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task_message">No Task Selected</string>
    <string name="edit_button_description">Button to edit task details</string>
    <string name="delete_button_description">Button to delete task</string>
    <string name="addedit_task_name">Task Name</string>
    <string name="addedit_task_description">Task Description</string>
    <string name="addedit_task_sortorder">Task Sort Order</string>
    <string name="addedit_button_save">Save</string>
    <string name="addedit_name_hint">Task name: required</string>
    <string name="addedit_description_hint">Task description: (optional)</string>
    <string name="addedit_sortorder_hint">Orders: sorts low to high</string>
    <string name="addedit_btn_save_text">Save</string>
    <string name="title_activity_add_edit">AddEditActivity</string>
    <string name="instructions_heading"><b><i>Instructions</i></b>\n\n</string>
    <string name="instructions">Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort orders will be placed higher up the list.Tasks with the same sort order will be sorted alphabetically.\n\nTapping a task will start the timer for that task (and will stop the timer for any previous task that was being timed).\n\nEach task has Edit and Delete buttons if you want to change the details or remove the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="deldiag_positive_caption">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="extdiag_message">Are you sure you want to exit?\n\nChanges you made so far will not be saved</string>
    <string name="extdiag_positive_caption">Exit</string>
    <string name="about_copyright">Copyright © 2020 Abdullah Alqahtani</string>
    <string name="about_weblink_16">Instructions available at</string>
    <string name="about_url_16"><u>http://www.abdullahalqahtani.academy</u></string>
    <string name="about_weblink_21">Instructions available at www.abdullahalqahtani.academy</string>
    <string name="about_email">For support email abdalqa6@gmail.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
    <string name="current_timing_text">Timing %1$s</string>
    <string name="td_text_name">Task Name</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="durations_report_activity">Durations Report</string>
    <string name="rm_title_filter_day">Show Day</string>
    <string name="rm_title_filter_week">Show Week</string>
    <string name="rm_title_filter_date">Set Report Date</string>
    <string name="rm_title_delete">Delete Old Timings</string>
    <string name="menumain_delete_generate">Delete All Generated Data</string>
    <string name="diag_filter_date_picker">Select date for report</string>
    <string name="diag_delete_date_picker">Select date to delete up to</string>
    <string name="delete_timings_message">\"Are you sure you want to delete all timings before %1s?\"</string>
    <string name="show_button_description">Show all timings for this task</string>
    <string name="td_text_date_time">Date Time</string>
    <string name="td_text_time">Time</string>
    <string name="tli_more_description">More Options</string>
    <string name="menutask_report_title">Durations Report</string>
    <string name="menutask_edit_title">Edit</string>
    <string name="menutask_delete_title">Delete</string>
    <string name="heading_single_start_date">Start Date</string>
    <string name="heading_single_start_time">Start Time</string>
    <string name="heading_single_end_date_heading">End Date</string>
    <string name="heading_single_end_time">End Time</string>
    <string name="heading_single_duration">Duration</string>
</resources>