<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table_single_heading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TableRow

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/single_start_date_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="6dp"
            android:text="@string/heading_single_start_date"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_start_time_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:padding="6dp"
            android:text="@string/heading_single_start_time"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_end_date_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:padding="6dp"
            android:text="@string/heading_single_end_date_heading"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_end_time_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:padding="6dp"
            android:text="@string/heading_single_end_time"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/single_duration_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/accent"
            android:padding="6dp"
            android:text="@string/heading_single_duration"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        tools:listitem="@layout/single_task_duration_items" />

</TableLayout>